# QRDrone

./: .gitmodules  README.md
ARDroneCameraCalibration/: calibrateCamera.py  readme.txt  saveImages.py  showUndistorted.py
QRDrone/: CMakeLists.txt
QRDrone/lib/: CMakeLists.txt
QRDrone/src/: QRDrone.cpp
